:sparkles: WebClientResponseException supports decoding empty content